@@ -1,6 +1,7 @@
 2010-04-01  Andy Grunwald  <andreas.grunwald@wmdb.de>
 
 	* Fixed bug #7079: redirect-field in answerpage is not checked for space characters
+	* Fixed bug #6516: "fe_group" field config missing in powermail tca.php
 	
 2010-03-09  Andy Grunwald  <andreas.grunwald@wmdb.de>
 
